src/Services/adminServices/locationServices/k8s/configmap.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: location-services
  labels:
    name: location-services
