src/Services/adminServices/locationServices/k8s/rbac.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: location-services
  labels:
    name: location-services
    environment: production
