src/Services/adminServices/locationServices/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: location-services
  namespace: location-services
  labels:
    app: location-services
spec:
  type: LoadBalancer
  selector:
    app: location-services
  ports:
  - name: http
    port: 80
    targetPort: 7136
    protocol: TCP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
---
apiVersion: v1
kind: Service
metadata:
  name: location-services-internal
  namespace: location-services
  labels:
    app: location-services
spec:
  type: ClusterIP
  selector:
    app: location-services
  ports:
  - name: http
    port: 7136
    targetPort: 7136
    protocol: TCP
